fixed several issues with padding of the inner wrap, calculating scrollbar width and more

--- a/css/layout.css
+++ b/css/layout.css
@@ -16,5 +16,5 @@ p { display: block; }
 .box3 { padding: 20px; }
 .box4 p { width: 1500px; }
 .box5 p {  }
-
-.inner-div { width: 205px; height: 155px; background: #eee; }
+.box6 { padding: 30px; }
+.inner-div { width: 100px; height: 185px; background: #eee; }
